--- a/mailing_personal_grades-2.ipynb
+++ b/mailing_personal_grades-2.ipynb
@@ -37,8 +37,8 @@
    "source": [
     "def send_email(recipient: str, msg_text: str, index: int):\n",
     "    \n",
-    "    login = open('mail.txt', 'r').read()\n",
-    "    password = open('password.txt', 'r').read()\n",
+    "    login = open('mail.txt', 'r').read()#в файл mail.txt написать адрес почты, с которой будет рассылка, или же просто написать адрес прямо в эту строку\n" ,
+    "    password = open('password.txt', 'r').read()#в файл password.txt написать пароль от почты, с которой будет рассылка, или же просто написать пароль прямо в эту строку\n",
     "\n",
     "    s = smtplib.SMTP('smtp.yandex.ru', 587, timeout=10)\n",
     "    s.starttls()\n",
@@ -46,7 +46,7 @@
     "\n",
     "    \n",
     "    msg = MIMEText(f'{msg_text}', 'plain', 'utf-8')\n",
-    "    msg['Subject'] = Header('Текущие оценки по курсу \"###\"', 'utf-8')\n",
+    "    msg['Subject'] = Header('Текущие оценки по курсу \"###\"', 'utf-8') #тема письма\n", 
     "    msg['From'] = login\n",
     "    msg['To'] = recipient\n",
     "    \n",
@@ -76,7 +76,7 @@
     "    for pr in marks.columns[4:]:\n",
     "        if not np.isnan(row[pr]):\n",
     "            cur_marks.append(row[pr])\n",
-    "            text += f'Проверочная {pr[-1]}: {int(row[pr])} из 3\\n'\n",
+    "            text += f'Проверочная {pr[-1]}: {int(row[pr])} из 3\\n' #эта часть кода отвечает за вид присылаемых оценок, меняется в зависимости от задачи\n",
     "            \n",
     "    final_text = f'{name}, добрый день! \\n\\nВаши текущие оценки по курсу \"###\": \\n{text}\\nТекущая набранная доля баллов за лекционные проверочные составляет {np.sum(cur_marks)} / 18 ({np.round(np.sum(cur_marks)/18, 2)})\\n\\nС уважением, \\n###'\n",
     "    send_email(row['почта'], final_text, index)\n",
