--- a/mailing_personal_grades-2.ipynb
+++ b/mailing_personal_grades-2.ipynb
@@ -37,8 +37,8 @@
    "source": [
     "def send_email(recipient: str, msg_text: str, index: int):\n",
     "    \n",
-    "    login = open('mail.txt', 'r').read()#в файл mail.txt написать адрес почты, с которой будет рассылка, или же просто написать адрес прямо в эту строку\n" ,
-    "    password = open('password.txt', 'r').read()#в файл password.txt написать пароль от почты, с которой будет рассылка, или же просто написать пароль прямо в эту строку\n",
+    "    login = open('mail.txt', 'r').read()\n#в файл mail.txt написать адрес почты, с которой будет рассылка, или же просто написать адрес прямо в эту строку\n" ,
+    "    password = open('password.txt', 'r').read()\n#в файл password.txt написать пароль от почты, с которой будет рассылка, или же просто написать пароль прямо в эту строку\n",
     "\n",
     "    s = smtplib.SMTP('smtp.yandex.ru', 587, timeout=10)\n",
     "    s.starttls()\n",
