--- a/mailing_personal_grades-2.ipynb
+++ b/mailing_personal_grades-2.ipynb
@@ -76,7 +76,7 @@
     "    for pr in marks.columns[4:]:\n",
     "        if not np.isnan(row[pr]):\n",
     "            cur_marks.append(row[pr])\n",
-    "            text += f'Проверочная {pr[-1]}: {int(row[pr])} из 3\\n' #эта часть кода отвечает за вид присылаемых оценок, меняется в зависимости от задачи\n",
+    "            text += f'Проверочная {pr[-1]}: {int(row[pr])} из 3\\n' # эта часть кода отвечает за вид присылаемых оценок, \n# меняется в зависимости от задачи\n",
     "            \n",
     "    final_text = f'{name}, добрый день! \\n\\nВаши текущие оценки по курсу \"###\": \\n{text}\\nТекущая набранная доля баллов за лекционные проверочные составляет {np.sum(cur_marks)} / 18 ({np.round(np.sum(cur_marks)/18, 2)})\\n\\nС уважением, \\n###'\n",
     "    send_email(row['почта'], final_text, index)\n",
